1.20.1向けにマナ転写のAPI差分を補正